<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp">


    <TextView
        android:layout_width="match_parent"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/main"
        android:layout_height="wrap_content"
        android:text="@string/edit_recipe"
        android:textSize="36sp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/add_food"
        android:textSize="16sp"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/insert_food"
        android:id="@+id/et_insert_food_name"
        android:layout_marginTop="40dp"
        android:inputType="text"
        android:autofillHints="name " />
    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:width="2dp"
        android:id="@+id/et_insert_ingredient"
        android:hint="@string/insert_ingredient"
        android:inputType="text" />
    <EditText
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:id="@+id/et_insert_step"
        android:layout_height="100dp"
        android:hint="@string/insert_step"
        android:inputType="text" />


    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="45dp"
        android:text="@string/edit"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:id="@+id/btn_edit"
        app:cornerRadius="20dp"
        />
    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/cancel"
        android:textAllCaps="false"
        app:strokeWidth="2dp"
        app:strokeColor="@color/main"
        android:backgroundTint="@color/white"
        android:textColor="@color/main"
        android:textSize="24sp"
        android:id="@+id/btn_cancel"
        app:cornerRadius="20dp"
        />
    </LinearLayout>

</LinearLayout>