<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SignUpFragment">

    <com.google.android.material.button.MaterialButton
        android:layout_width="326dp"
        android:layout_height="70dp"
        android:id="@+id/btn_signup_2"
        android:text="@string/signup"
        android:layout_marginTop="50dp"
        android:textAllCaps="false"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nama"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/nama"
        app:boxStrokeWidth="2dp"
        android:textColorHint="@color/main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19999999">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/et_name"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textColor="@color/main" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:cursorVisible="true"
        android:layout_width="250dp"
        app:boxStrokeWidth="2dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textColorHint="@color/main"
        app:layout_constraintEnd_toEndOf="@+id/nama"
        app:layout_constraintStart_toStartOf="@+id/nama"
        app:layout_constraintTop_toBottomOf="@+id/nama"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:id="@+id/et_email"
            android:textColor="@color/main"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        app:boxStrokeWidth="2dp"
        android:textColorHint="@color/main"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintEnd_toEndOf="@id/email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="@id/email">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/et_username_sign_up"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textColor="@color/main"/>


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="2dp"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="@+id/username"
        app:layout_constraintStart_toStartOf="@+id/username"
        app:layout_constraintTop_toBottomOf="@+id/username"
        android:textColorHint="@color/main"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_password_signup"
            android:textColor="@color/main"/>
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>