<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentMain"
    android:layout_margin="16dp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/tv_hello"
            android:layout_height="wrap_content"
            android:text="Hello, Apip"
            android:textColor="@color/design_default_color_primary"
            android:textSize="36sp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/white"
            android:src="@drawable/ic_baseline_logout_24"
            android:id="@+id/logout"
            android:enabled="false"/>

    </LinearLayout>
        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cook_today"
        android:textSize="16sp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_height="40dp"
        android:drawableStart="@drawable/ic_baseline_search_24"
        android:hint="Searc Recips"
        android:background="#2F000000"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="95dp"
                android:background="#2F000000">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/foodshoot"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="16dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_marginStart="30dp"
                        android:layout_height="wrap_content"
                        android:text="@string/you_have"
                        android:layout_gravity="center"
                        android:textSize="16sp"/>

                </LinearLayout>

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/your_recipe"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"/>

                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/plus"
                    android:layout_marginStart="240dp"
                    android:id="@+id/ib_add"
                    android:backgroundTint="@color/white"/>

            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recycleview"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/fragment_list_menu">

            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>

    </ScrollView>

</LinearLayout>