<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    app:cardElevation="8dp"
    app:cardCornerRadius="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ListMenu">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nama_makanan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/main"
            android:text="@string/nama_makanan"
            android:textSize="20sp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="8dp"/>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ingerdient"
            android:text="@string/ingredient"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/nama_makanan"
            android:textSize="13sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/isi_ingredient"
            android:text=" - "
            android:layout_marginStart="16dp"
            android:fontFamily="@font/poppins_light"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ingerdient"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/how_to"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/step"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/isi_ingredient"
            android:textSize="13sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:fontFamily="@font/poppins_light"
            android:id="@+id/isi_how_to"
            android:text=" - "
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/how_to"
            android:textSize="18sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@id/isi_how_to"
            app:layout_constraintTop_toBottomOf="@id/isi_how_to">
             <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/iv_edit"
                android:background="#2F000000"
                android:layout_margin="16dp"
                android:src="@drawable/ic_edit" />
            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:id="@+id/iv_remove"
                android:background="#2F000000"
                android:src="@drawable/ic_remove" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>